2010-06-14  Adam Roben  <aroben@apple.com>

        Improve instructions for debugging on Windows

        Fixes <http://webkit.org/b/40585>.

        Reviewed by Steve Falkenburg.

        * building/debug.html: Improved the Windows instructions. We now
        instruct users to set things up so that hitting F5 from WebKit.sln
        will launch Safari with the WEBKITNIGHTLY environment variable
        pointing to the location of the built WebKit.dll.

        * building/console_vs2005.jpg: Removed.
        * building/debug_vs2005.jpg: Removed.

        * building/launch-debugger-vs2005.png: Added.
        * building/set-as-startup-project-vs2005.png: Added.
        * building/set-debugging-properties-vs2005.png: Added.

2010-06-07  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Darin Adler.

        Add documentation on the various assertion macros in WebKit.

        https://bugs.webkit.org/show_bug.cgi?id=39950

        * coding/assertion-guidelines.html: Added.

2010-05-29  Sterling Swigart  <sswigart@google.com>

        Reviewed by David Levin.

        Adding tests to canvas.html performance test
        https://bugs.webkit.org/show_bug.cgi?id=39883

        * demos/canvas-perf/canvas.html:
        Added tests for:
            strokeText
            fillText
            strokeLine

2010-05-25  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Darin Adler.

        Update the style guide re: static member variables and structs
        https://bugs.webkit.org/show_bug.cgi?id=39663

        Per Darin Adler's proposal on webkit-dev.

        All static member variables should be prefixed with s_.
        m_ should not be used for public data members in structs.
        Only structs should have public data members.

        * coding/coding-style.html:

2010-05-24  David Levin  <levin@chromium.org>

        Reviewed by Maciej Stachowiak.

        Improve canvas perf test accuracy.
        https://bugs.webkit.org/show_bug.cgi?id=39635
